--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "local-start" : "ng serve -o",
+    "local-start": "ng serve -o",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -14,17 +14,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.3.0",
-    "@angular/cdk": "^13.1.3",
+    "@angular/cdk": "^13.3.9",
     "@angular/cli": "~13.3.9",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/compiler-cli": "~13.3.0",
     "@angular/core": "~13.3.0",
+    "@angular/flex-layout": "^13.0.0-beta.38",
     "@angular/forms": "~13.3.0",
     "@angular/material": "^13.1.3",
+    "@angular/material-moment-adapter": "^13.3.9",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@types/crypto-js": "^4.1.1",
+    "bcrypt": "^5.0.1",
+    "crypto-js": "^4.1.1",
     "express": "^4.18.1",
     "path": "^0.12.7",
     "rxjs": "~7.5.0",
@@ -34,6 +39,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.9",
+    "@types/bcrypt": "^5.0.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "enhanced-resolve": "^3.3.0",
